[metadata]
name = redesign.health
version = 0.1
author = Sander Voerman
author_email = sander@redesigningpsychiatry.org
description = Shared library for Redesigning Psychiatry projects
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/redesigningpsychiatry/health-python
classifiers =
    Programming Language :: Python :: 3
    Topic :: Documentation
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find_namespace:
python_requires = >=3.6

[options.packages.find]
where = src